cli/tests/snapshots/cli__list_corpora_fully_loaded.snap
---
source: cli/tests/cli.rs
expression: actual
---

success: true
exit_code: 0
----- stdout -----
12:00:00[INFO] Loaded corpus sample-disk-based-3.3
12:00:00[INFO] Corpus cache after preloading sample-disk-based-3.3: 100MB / 300MB - loaded corpora [sample-disk-based-3.3]
12:00:00[INFO] Preloaded corpus in 10 ms
sample-disk-based-1.5 (not loaded)
sample-disk-based-3.2 (not loaded)
sample-disk-based-3.3 (fully loaded)
sample-disk-based-3.8 (not loaded)
sample-memory-based-1.5 (not loaded)
sample-memory-based-3.2 (not loaded)
sample-memory-based-3.3 (not loaded)
graphANNIS says good-bye!

----- stderr -----
