cli/tests/snapshots/cli__list_corpora_not_loaded.snap
---
source: cli/tests/cli.rs
expression: actual
---

success: true
exit_code: 0
----- stdout -----
sample-disk-based-1.5 (not loaded)
sample-disk-based-3.2 (not loaded)
sample-disk-based-3.3 (not loaded)
sample-disk-based-3.8 (not loaded)
sample-memory-based-1.5 (not loaded)
sample-memory-based-3.2 (not loaded)
sample-memory-based-3.3 (not loaded)
graphANNIS says good-bye!

----- stderr -----
