cli/tests/snapshots/cli__list_corpora_partially_loaded.snap
---
source: cli/tests/cli.rs
expression: actual
---

success: true
exit_code: 0
----- stdout -----
12:00:00[INFO] Loaded corpus sample-disk-based-3.3
12:00:00[INFO] Corpus cache after loading components: 100MB / 300MB - loaded corpora [sample-disk-based-3.3]
12:00:00[INFO] Executed query in 10 ms
result: 44 matches in 4 documents
sample-disk-based-1.5 (not loaded)
sample-disk-based-3.2 (not loaded)
sample-disk-based-3.3 (partially loaded)
sample-disk-based-3.8 (not loaded)
sample-memory-based-1.5 (not loaded)
sample-memory-based-3.2 (not loaded)
sample-memory-based-3.3 (not loaded)
graphANNIS says good-bye!

----- stderr -----
